--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,14 +5,67 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <title>{% block title %}{% endblock %}</title>
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static "main/style.css" %}">
+        <link rel="icon" href="{% static "favicon.svg" %}" type="image/svg+xml">
 
         {% block head %}
         {% endblock %}
     </head>
 
-    <body>
+    <body style="background-color: white;">
+
+        Konnichiwa.<br>
+        Kazemaru desu.<br>
+        This site is under construction.
+
+        <header>
+
+            <div class="titlebar row w-100 m-0 p-0">
+                <div class="col-md-2 m-0 p-0 d-flex justify-content-center">
+                    <img style="width: 100%; max-width: 200px; padding: 0px 1rem;" src="{% static "main/marukazemaru_logo.svg" %}">
+                </div>
+                <div class="col-md-10 m-0 p-0 d-flex align-items-center">
+                    <div style="padding: 1rem 3rem;">
+                        このサイトは品川風丸のホームページです。制作物等をまとめています。
+                    </div>
+                </div>
+            </div>
+
+        </header>
+
+        <div class="row w-100 p-0 m-0">
+            <!-- ~~~~~~~~~~~~~~~ -->
+            <!--     自己紹介     -->
+            <!-- ~~~~~~~~~~~~~~~ -->
+            <div class="col-md-3 m-0 p-0">
+                <div class="heading">
+                    <p>自己紹介</p>
+                </div>
+        
+                <div style="padding: 1rem 3rem; margin-bottom: 1.5rem;">
+                    シナガワカゼマル<br>
+                    <a style="font-size: x-large; font-weight: bolder;">品川風丸</a><br>
+                    2000年1月生<br>
+                    千葉工業大学3年
+                </div>
+            </div>
+        
+            <!-- ~~~~~~~~~~~~~~~~~~ -->
+            <!--     制作物まとめ     -->
+            <!-- ~~~~~~~~~~~~~~~~~~ -->
+            <div class="col-md-9 m-0 p-0">
+                <main>
+
+                    {% block main %}
+                    {% endblock %}
+
+                </main>
+            </div>
+        </div>
+
         {% block body %}
         {% endblock %}
+
     </body>
 </html>
