--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,34 +2,56 @@
 
 
 {% block head %}
-<title>index</title>
+<title>トップ｜品川風丸のHP</title>
+
+<meta name="description" content="品川風丸のホームページです。">
 {% endblock %}
 
 
-{% block body %}
-
-Konnichiwa.<br>
-Kazemaru desu.<br>
-This site is under construction.<br>
-<h2>つくったもの</h2>
+{% block main %}
 {% load static %}
-<div class="container">
-    <button class="btn btn-light">
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-md-4 d-flex align-items-center justify-content-center">
-                    <img class="w-100" style="max-width: 300px" src="{% static "wili/wili_logo.svg" %}">
-                </div>
-                <div class="col-md-8 d-flex align-items-center justify-content-center">
-                    <div style="text-align: left;">
-                        <p class="h4">WiLI</p>
-                        なくしもの捜索用プログラム群です。<br>
-                        人間の行動を確率論でモデル化することでなくしものの位置を推定します。
+
+    <!-- ~~~~~~~~~~~~~~~~~~ -->
+    <!--     制作物まとめ     -->
+    <!-- ~~~~~~~~~~~~~~~~~~ -->
+    <div class="heading">
+        <p>制作物</p>
+    </div>
+
+    <div class="w-100 p-2" style="max-width: 1200px;">
+        <button class="btn btn-light my-1 mx-auto w-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 d-flex align-items-center justify-content-center">
+                        <img class="w-100" style="max-width: 300px" src="{% static "wili/wili_logo.svg" %}">
+                    </div>
+                    <div class="col-md-8 d-flex align-items-center">
+                        <div style="text-align: left;">
+                            <p class="h4">WiLI</p>
+                            なくしもの捜索用プログラム群です。<br>
+                            人間の行動を確率論でモデル化することでなくしものの位置を推定します。
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </button>
-</div>
+        </button>
+    
+        <button class="btn btn-light my-1 mx-auto w-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 d-flex align-items-center justify-content-center">
+                        <img class="w-100" style="max-width: 300px" src="{% static "main/marukazemaru_logo.svg" %}">
+                    </div>
+                    <div class="col-md-8 d-flex align-items-center">
+                        <div style="text-align: left;">
+                            <p class="h4">marukazemaru.com</p>
+                            本webサイトです。<br>
+                            NGINX+Djangoで作られています。
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </button>
+    </div>
 
 {% endblock %}
