--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="w-100 p-2" style="max-width: 1200px;">
-        <button class="btn btn-light my-1 mx-auto w-100">
+        <button class="btn btn-main my-1 mx-auto w-100" onclick="location.href='/wili'">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 d-flex align-items-center justify-content-center">
@@ -36,7 +36,7 @@
             </div>
         </button>
     
-        <button class="btn btn-light my-1 mx-auto w-100">
+        <button class="btn btn-main my-1 mx-auto w-100">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 d-flex align-items-center justify-content-center">
