--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static "main/style.css" %}">
+        <link rel="icon" href="{% static "favicon.ico" %}">
         <link rel="icon" href="{% static "favicon.svg" %}" type="image/svg+xml">
 
         {% block head %}
@@ -15,10 +16,10 @@
 
     <body style="background-color: white;">
 
-        Konnichiwa.<br>
+        {% comment %} Konnichiwa.<br>
         Kazemaru desu.<br>
         This site is under construction.
-
+        {% endcomment %}
         <header>
 
             <div class="titlebar row w-100 m-0 p-0">
